Create: Criação da navbar

--- a/adega brasil/assets/css/style.css
+++ b/adega brasil/assets/css/style.css
@@ -172,6 +172,13 @@ pre {
 	padding: 15px 0;
 	margin-bottom: 5px;
 }
+
+.container>.navbar-header {
+	background: #34495e;
+	color: #bdc3c7;
+
+
+}
 .nav-tabs {
 	border-bottom-color: #ecf0f1;
 }
